@@ -7,8 +7,10 @@ apport (0.138) UNRELEASED; urgency=low
     more.
   * apport/hookutils.py, backends/packaging_rpm.py: Convert usage of
     md5 module (which is deprecated in 2.6) to hashlib.
+  * Replace all instances of using an exception's .message attribute
+    with str(exception), since message is deprecated in Python 2.6.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 24 Feb 2009 22:06:08 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 24 Feb 2009 22:11:39 +0100
 
 apport (0.137) jaunty; urgency=low
 
